Added TTN export
