# docs/swagger.yaml
@@ -10,12 +10,22 @@ definitions:
         type: integer
       closed_date:
         type: string
+      consignee_address:
+        type: string
+      consignee_city:
+        type: string
       consignee_name:
         type: string
       contractor_number:
         type: string
+      customer_address:
+        type: string
       customer_id:
         type: integer
+      customer_inn:
+        type: string
+      customer_kpp:
+        type: string
       customer_name:
         type: string
       delivered_date:
@@ -28,13 +38,19 @@ definitions:
         type: number
       ordered_date:
         type: string
+      seller_address:
+        type: string
       seller_id:
         type: integer
+      seller_inn:
+        type: string
+      seller_kpp:
+        type: string
       seller_name:
         type: string
       shipped_date:
         type: string
-      shipping_date_est:
+      shipping_date_req:
         type: string
       status:
         type: string
@@ -72,6 +88,8 @@ definitions:
       tax:
         type: number
       warehouse:
+        type: string
+      warehouse_address:
         type: string
     type: object
   main.Orders:
