# methodHandlers.go
@@ -745,15 +745,15 @@ func (mh *MethodHandlers) getOrdersExcel(ctx context.Context, userInfo UserInfo,
 				excelize.Cell{Value: "127299, г. Москва, ул. Клары Цеткин, д. 2, помещ. 138"},
 				excelize.Cell{Value: "3528136252/771301001"},
 				excelize.Cell{Value: order.SellerName},
-				excelize.Cell{Value: order.sellerAddress},
+				excelize.Cell{Value: order.SellerAddress},
 				excelize.Cell{Value: order.CustomerName},
-				excelize.Cell{Value: order.customerAddress},
+				excelize.Cell{Value: order.CustomerAddress},
 				excelize.Cell{Value: order.CustomerName},
-				excelize.Cell{Value: order.customerAddress},
-				excelize.Cell{Value: order.sellerInn},
-				excelize.Cell{Value: order.sellerKpp},
-				excelize.Cell{Value: order.customerInn},
-				excelize.Cell{Value: order.customerKpp},
+				excelize.Cell{Value: order.CustomerAddress},
+				excelize.Cell{Value: order.SellerInn},
+				excelize.Cell{Value: order.SellerKpp},
+				excelize.Cell{Value: order.CustomerInn},
+				excelize.Cell{Value: order.CustomerKpp},
 
 				excelize.Cell{Value: orderDetail.ProductId},
 				excelize.Cell{Value: orderDetail.Code},
